<resources>
    <string name="app_name">Attendance</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="About">About</string>
    <string name="title_activity_student_home">StudentHome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="account_type">Account type</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="studentlogin">STUDENT LOGIN</string>
    <string name="teacherlogin">TEACHER LOGIN</string>
    <string name="todo">TODO</string>
    <string name="description">image</string>
    <string name="view_attendance">View Attendance</string>
    <string name="take_attendance">Take Attendance</string>
    <string name="next">Continue</string>
    <string name="pass_change">Change Password</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="server_ip">Change server IP</string>
    <string name="submit">Submit</string>
    <string name="section">Section</string>
    <string name="program">Program</string>
    <string name="course">Course</string>
    <string name="batch">Batch</string>
    <string name="absent">ABSENT</string>
    <string name="present">PRESENT</string>
    <string name="perm">PERMISSION</string>
    <string name="name">Akram Seid Endris</string>
    <string name="id">2221/18</string>
    <string name="update">Save</string>
    <string name="about">About</string>
    <string name="refresh">Refresh</string>
    <string name="old">Old Password</string>
    <string name="new_pass">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>
