<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pass_change"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"

        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/old_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/old_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/old"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/new_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_pass"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_text_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleDrawable="@drawable/show_password_selector"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_pass"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/changebtn"
            android:layout_width="100dp"
            android:layout_marginEnd="30dp"
            android:layout_height="wrap_content"
            android:text="@string/save"/>
        <Button
            android:id="@+id/cancelbtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>
    </LinearLayout>


</LinearLayout>