<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"

    android:visibility="visible">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_margin"
        android:layout_marginTop="@dimen/margin_tiny"
        android:layout_marginRight="@dimen/default_margin"
        android:layout_marginBottom="@dimen/margin_tiny"
        app:cardCornerRadius="@dimen/cardview_radius"
        app:cardElevation="@dimen/cardview_elevation">

        <LinearLayout
            android:id="@+id/single_view"
            android:layout_width="222dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="70dp">

            <TextView
                android:id="@+id/name_view"
                android:layout_width="192dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="5dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/id_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/id"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <RadioGroup
            android:id="@+id/button_box"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:orientation="vertical"
            android:visibility="visible">

            <RadioButton
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/present"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/perm_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/perm"
                android:textSize="20sp" />
        </RadioGroup>
    </androidx.cardview.widget.CardView>

</LinearLayout>