<?xml version='1.0' encoding='utf-8' ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/box"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="102.0dip"
        android:text="@string/account_type"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="19.0sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/teacher"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5.0dip">

            <ImageView
                android:layout_width="80.0dip"
                android:layout_height="80.0dip"
                android:background="@drawable/ovalsahpe"
                android:padding="12.0dip"
                android:src="@drawable/teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/teacher"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17.0sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student"
            android:layout_width="fill_parent"
            android:layout_height="130.0dip"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5.0dip">

            <ImageView
                android:layout_width="80.0dip"
                android:layout_height="80.0dip"
                android:background="@drawable/ovalsahpe"
                android:padding="10.0dip"
                android:src="@drawable/student" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8.0dip"
                android:text="@string/student"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17.0sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
