<?xml version='1.0' encoding='utf-8' ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="17.0dip">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20.0dip"
        android:orientation="horizontal"
        android:weightSum="2.0">

        <androidx.cardview.widget.CardView
            android:id="@+id/ViewAttendanceCV"
            android:layout_width="0.0dip"
            android:layout_height="150.0dip"
            android:layout_marginEnd="10.0dip"
            android:layout_weight="1.0">

            <LinearLayout
                android:id="@+id/viewer"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:background="@drawable/border_blue"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="60.0dip"
                    android:layout_height="60.0dip"
                    android:contentDescription="@string/description"
                    android:src="@drawable/view"
                    tools:ignore="ImageContrastCheck" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/view_attendance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/teacherAttendanceCV"
            android:layout_width="0.0dip"
            android:layout_height="150.0dip"
            android:layout_marginStart="10.0dip"
            android:layout_weight="1.0">

            <LinearLayout
                android:id="@+id/ticker"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:background="@drawable/border_blue"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70.0dip"
                    android:layout_height="70.0dip"
                    android:contentDescription="@string/description"
                    android:src="@drawable/attend" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5.0dip"
                    android:text="@string/take_attendance"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16.0sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>
